public/core/v0.9/_sources/reference/tmlt/core/domains/base/index.rst.txt



***********
base
***********

.. py:module:: tmlt.core.domains.base

.. autoapi-nested-parse::

   Base class for input/output domains.











Classes
=======

.. list-table::

   * - :class:`.Domain`
     - Base class for input/output domains.

   
.. py:class:: Domain

   Bases: :class:`abc.ABC`

   Base class for input/output domains.






   .. py:method:: carrier_type(self)
      :property:

      Returns the type of elements in the domain.


   .. py:method:: validate(self, value)

      Raises an error if value is not in the domain.


   .. py:method:: __contains__(self, value)

      Returns True if value is in the domain.




Exceptions
==========


   
.. py:exception:: OutOfDomainError

   Bases: :class:`Exception`

   Exception type that indicates a validation error in a Domain.






