public/core/v0.10/_sources/reference/tmlt/core/domains/base/index.rst.txt



***********
base
***********

.. py:module:: tmlt.core.domains.base

.. autoapi-nested-parse::

   Base class for input/output domains.











Classes
=======

.. list-table::

   * - :class:`.Domain`
     - Base class for input/output domains.

   
.. py:class:: Domain

   Bases: :class:`abc.ABC`

   Base class for input/output domains.






   .. py:method:: carrier_type()
      :property:

      Returns the type of elements in the domain.


   .. py:method:: validate(value)

      Raises an error if value is not in the domain.


   .. py:method:: __contains__(value)

      Returns True if value is in the domain.




Exceptions
==========

.. list-table::

   * - :exc:`.OutOfDomainError`
     - Exception type that indicates a validation error in a Domain.
   * - :exc:`.DomainMismatchError`
     - Exception type raised when two or more domains should match, but don't.
   * - :exc:`.UnsupportedDomainError`
     - Exception type that indicates that a given domain is not supported.

   
.. py:exception:: OutOfDomainError(domain, value, msg)

   Bases: :class:`Exception`

   Exception type that indicates a validation error in a Domain.




   
.. py:exception:: DomainMismatchError(domains, msg)

   Bases: :class:`ValueError`

   Exception type raised when two or more domains should match, but don't.




   
.. py:exception:: UnsupportedDomainError(domain, msg)

   Bases: :class:`TypeError`

   Exception type that indicates that a given domain is not supported.






